--- a/src/pages/AddGoods/components/GoodsForm/index.module.scss
+++ b/src/pages/AddGoods/components/GoodsForm/index.module.scss
@@ -6,7 +6,7 @@
 }
 
 .formLabel {
-  width: 80px;
+  width: 100px;
   font-weight: 450;
 }
 
@@ -28,4 +28,8 @@
 
 .numberPicker {
   width: 120px;
+}
+
+.numberPickerPrice {
+  width: 200px;
 }
